// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`registration.js test 1`] = `
<div
  className="RegistrationBox"
>
  <div
    className="RegistrationBox__RegistrationForm"
  >
    <h3>
      Registration
    </h3>
    <form
      autoComplete="off"
      className="RegistrationForm__RegForm"
    >
      <span>
        E-mail
      </span>
      <input
        placeholder="email"
        type="text"
      />
      <span>
        Password
      </span>
      <input
        autoComplete="off"
        className="password"
        placeholder="password"
        type="password"
      />
      <input
        className="RegForm__loginButton"
        onClick={[Function]}
        type="button"
        value="registration"
      />
    </form>
  </div>
</div>
`;

exports[`registration.js test 2`] = `
<div
  className="RegistrationBox"
>
  <div
    className="RegistrationBox__RegistrationForm"
  >
    <h3>
      Registration
    </h3>
    <form
      autoComplete="off"
      className="RegistrationForm__RegForm"
    >
      <p
        className="error"
      >
        invalid user data
      </p>
      <span>
        E-mail
      </span>
      <input
        placeholder="email"
        type="text"
      />
      <span>
        Password
      </span>
      <input
        autoComplete="off"
        className="password"
        placeholder="password"
        type="password"
      />
      <input
        className="RegForm__loginButton"
        onClick={[Function]}
        type="button"
        value="registration"
      />
    </form>
  </div>
</div>
`;
